Update Ui and some func

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#8F959E</color>
-    <color name="light_gray">#F5F6FA</color>
+    <color name="light_gray">#F8F8F8</color>
     <color name="white_opacity">#CCFFFFFF</color>
     <color name="black_opacity">#E6000000</color>
-    <color name="purple">#9775FA</color>
+    <color name="green">#4E5A37</color>
 </resources>
