--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -27,98 +27,64 @@
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:adjustViewBounds="true"
-                android:background="@color/black"
+                android:background="@color/white"
                 android:scaleType="centerCrop"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/info"
+                android:orientation="vertical"
+                android:layout_marginTop="36dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
+                android:padding="16dp"
                 app:layout_constraintTop_toBottomOf="@id/image">
 
-                <TextView
-                    android:id="@+id/category"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/regular"
-                    android:text="@{viewModel.productDetails.category}"
-                    android:textAllCaps="true"
-                    android:textColor="@color/gray"
-                    android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="Name" />
 
                 <TextView
                     android:id="@+id/title"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/bold"
+                    android:fontFamily="@font/cd_regular"
                     android:text="@{viewModel.productDetails.title}"
                     android:textColor="@color/black"
-                    android:textSize="24sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/category"
+                    android:textSize="20sp"
                     tools:text="Name" />
 
                 <TextView
-                    android:id="@+id/price_label"
-                    android:layout_width="0dp"
+                    android:id="@+id/price"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/regular"
-                    android:text="Price"
-                    android:textColor="@color/gray"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="12dp"
+                    android:fontFamily="@font/cd_bold"
+                    android:text="@{viewModel.productDetails.getPriceDisplay()}"
+                    android:textColor="@color/green"
+                    android:textSize="24sp"
                     tools:text="Price" />
 
                 <TextView
-                    android:id="@+id/price"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/bold"
-                    android:gravity="end"
-                    android:text="@{viewModel.productDetails.getPriceDisplay()}"
+                    android:layout_marginTop="32dp"
+                    android:fontFamily="@font/cd_regular"
+                    android:text="@{viewModel.productDetails.description}"
                     android:textColor="@color/black"
-                    android:textSize="24sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/price_label"
-                    tools:text="Price" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:textSize="14sp" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
-            <TextView
-                android:id="@+id/label_desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:fontFamily="@font/bold"
-                android:text="Description"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/info" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:fontFamily="@font/bold"
-                android:text="@{viewModel.productDetails.description}"
-                android:textColor="@color/gray"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/label_desc" />
 
             <ImageView
                 android:id="@+id/back"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_margin="20dp"
                 android:adjustViewBounds="true"
-                android:src="@drawable/image_back"
+                android:padding="8dp"
+                android:backgroundTint="@color/white"
+                android:elevation="15dp"
+                android:background="@drawable/bg_rounded_rectangle"
+                android:src="@drawable/arrow_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
