--- a/app/src/main/res/layout/item_products_list.xml
+++ b/app/src/main/res/layout/item_products_list.xml
@@ -15,70 +15,72 @@
     </data>
 
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:orientation="vertical">
-
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/white"
+            android:layout_margin="8dp"
             android:onClick="@{() -> clickListener.onClick(data)}"
             app:cardCornerRadius="18dp"
-            app:cardElevation="0dp">
+            app:cardElevation="16dp">
 
-            <ImageView
-                android:id="@+id/image"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                app:thumbnail="@{data.thumbnail}" />
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/image"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    app:thumbnail="@{data.thumbnail}" />
+
+                <TextView
+                    app:layout_constraintTop_toBottomOf="@id/image"
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:fontFamily="@font/cd_regular"
+                    android:text="@{data.title}"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    tools:text="Text Here" />
+
+                <TextView
+                    app:layout_constraintTop_toBottomOf="@id/title"
+                    android:id="@+id/price"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bold"
+                    android:layout_marginHorizontal="16dp"
+                    android:text="@{data.getPriceDisplay()}"
+                    android:textColor="@color/green"
+                    android:textSize="14sp"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    tools:text="Text Here" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:src="@drawable/arrow_select"/>
+
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         </com.google.android.material.card.MaterialCardView>
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:fontFamily="@font/regular"
-            android:layout_marginHorizontal="10dp"
-            android:text="@{data.title}"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            tools:text="Text Here" />
-
-        <TextView
-            android:id="@+id/price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:fontFamily="@font/bold"
-            android:layout_marginHorizontal="10dp"
-            android:text="@{data.getPriceDisplay()}"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            tools:text="Text Here" />
-
-        <TextView
-            android:id="@+id/category"
-            android:background="@drawable/bg_rounded_rectangle"
-            android:layout_width="wrap_content"
-            android:gravity="center"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/black"
-            android:fontFamily="@font/bold"
-            android:layout_marginTop="10dp"
-            android:paddingHorizontal="12dp"
-            android:paddingVertical="5dp"
-            android:layout_marginHorizontal="10dp"
-            android:text="@{data.category}"
-            android:textColor="@color/white"
-            android:textSize="11sp"
-            tools:text="Text Here" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
 </layout>
